# agent_mem_MCP

./: LICENSE  README.md  SKILL.md  pyproject.toml  server.py  setup-project.sh  update.sh
configs/: claude-code-settings.json  cursor-hooks.json  cursor-mcp.json
hooks/: claude-code-session-start.sh  claude-code-stop.sh  cursor-session-end.sh  cursor-session-start.sh
