[project]
name = "agent-memory-mcp"
version = "1.8.0"
description = "Shared memory MCP server for multi-agent project coordination. Solves context loss when agents (Claude, Cursor, Codex, etc.) work sequentially on the same project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
